// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseInput /> should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0px;
  margin-bottom: 0px;
}

.c2 {
  margin-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
}

.c11 {
  margin-left: 0px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c6 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c9 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c9::-webkit-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9::-moz-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9:-ms-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9::placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9:focus {
  outline: none;
}

.c10 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  margin-left: 0;
  background-color: hsla(213,89%,56%,1);
  border-width: 1px;
  height: 1px;
}

.c8 {
  background-color: hsla(220,27%,98%,1);
  border-bottom-color: hsla(216,19%,89%,1);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c8:hover {
  background-color: hsla(220,30%,96%,1);
  border-bottom-color: hsla(216,19%,89%,1);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8:focus-within {
  background-color: hsla(220,27%,98%,1);
  border-bottom-color: hsla(216,19%,89%,1);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
      display="flex"
    >
      <div
        class="c1"
        display="flex"
      >
        <label
          for="name-1-input-2"
          style="width: auto; flex-shrink: 0; margin-right: 16px; word-break: break-all;"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
              display="flex"
            >
              <p
                class="c4 Text__StyledText-wkh56f-0"
                color="surface.text.subdued.lowContrast"
                font-family="text"
                font-size="75"
                font-style="normal"
                font-weight="bold"
              >
                Enter name
                <div
                  class="c5"
                >
                  <p
                    class="c6 Text__StyledText-wkh56f-0"
                    color="surface.text.normal.lowContrast"
                    font-family="text"
                    font-size="100"
                    font-style="normal"
                    font-weight="regular"
                  />
                </div>
              </p>
            </div>
          </div>
        </label>
      </div>
      <div
        class="c7 c8"
        display="flex"
        width="100%"
      >
        <input
          aria-describedby=""
          aria-disabled="false"
          aria-invalid="false"
          aria-required="false"
          class="c9"
          id="name-1-input-2"
          type="text"
          value=""
        />
      </div>
      <div
        class=" c10"
      />
    </div>
    <div
      class="c11"
    >
      <div
        class="c12"
        display="flex"
      />
    </div>
  </div>
</div>
`;

exports[`<BaseInput /> should render with icons 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0px;
  margin-bottom: 0px;
}

.c2 {
  margin-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 12px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 12px;
}

.c14 {
  margin-left: 0px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c6 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c11 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  width: 100%;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11::-webkit-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c11::-moz-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c11:-ms-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c11::placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c11:focus {
  outline: none;
}

.c13 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  margin-left: 0;
  background-color: hsla(213,89%,56%,1);
  border-width: 1px;
  height: 1px;
}

.c8 {
  background-color: hsla(220,27%,98%,1);
  border-bottom-color: hsla(216,19%,89%,1);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c8:hover {
  background-color: hsla(220,30%,96%,1);
  border-bottom-color: hsla(216,19%,89%,1);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8:focus-within {
  background-color: hsla(220,27%,98%,1);
  border-bottom-color: hsla(216,19%,89%,1);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
      display="flex"
    >
      <div
        class="c1"
        display="flex"
      >
        <label
          for="name-31-input-32"
          style="width: auto; flex-shrink: 0; margin-right: 16px; word-break: break-all;"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
              display="flex"
            >
              <p
                class="c4 Text__StyledText-wkh56f-0"
                color="surface.text.subdued.lowContrast"
                font-family="text"
                font-size="75"
                font-style="normal"
                font-weight="bold"
              >
                Enter name
                <div
                  class="c5"
                >
                  <p
                    class="c6 Text__StyledText-wkh56f-0"
                    color="surface.text.normal.lowContrast"
                    font-family="text"
                    font-size="100"
                    font-style="normal"
                    font-weight="regular"
                  />
                </div>
              </p>
            </div>
          </div>
        </label>
      </div>
      <div
        class="c7 c8"
        display="flex"
        width="100%"
      >
        <div
          class="c9"
          display="flex"
        >
          <div
            class="c10"
            display="flex"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
                fill="hsla(216, 27%, 36%, 1)"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12 3C8.8711 3 6.22807 4.48937 4.23728 6.25113C2.24678 8.01264 0.822273 10.1194 0.105573 11.5528C-0.0351909 11.8343 -0.0351909 12.1657 0.105573 12.4472C0.822273 13.8806 2.24678 15.9874 4.23728 17.7489C6.22807 19.5106 8.8711 21 12 21C15.1289 21 17.7719 19.5106 19.7627 17.7489C21.7532 15.9874 23.1777 13.8806 23.8944 12.4472C24.0352 12.1657 24.0352 11.8343 23.8944 11.5528C23.1777 10.1194 21.7532 8.01264 19.7627 6.25113C17.7719 4.48937 15.1289 3 12 3ZM5.56272 16.2511C3.98954 14.8589 2.80913 13.2146 2.13142 12C2.80913 10.7854 3.98954 9.14106 5.56272 7.74887C7.3386 6.17729 9.5289 5 12 5C14.4711 5 16.6614 6.17729 18.4373 7.74887C20.0105 9.14106 21.1909 10.7854 21.8686 12C21.1909 13.2146 20.0105 14.8589 18.4373 16.2511C16.6614 17.8227 14.4711 19 12 19C9.5289 19 7.3386 17.8227 5.56272 16.2511Z"
                fill="hsla(216, 27%, 36%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <input
          aria-describedby=""
          aria-disabled="false"
          aria-invalid="false"
          aria-required="false"
          class="c11"
          id="name-31-input-32"
          placeholder="First Last"
          type="text"
          value=""
        />
        <div
          class="c9"
          display="flex"
        >
          <div
            class="c12"
            display="flex"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                fill="hsla(216, 27%, 36%, 1)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class=" c13"
      />
    </div>
    <div
      class="c14"
    >
      <div
        class="c15"
        display="flex"
      />
    </div>
  </div>
</div>
`;
